<resources>
    <string name="app_name" translatable="false">Act-Uni2</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login_user">User name</string>
    <string name="opt_2">Sports news</string>
    <string name="opt_3">Tech news</string>
    <string name="login_empty_fields_error_message">Please fill in all fields</string>
    <string name="terms_hello">Hello</string>
    <string name="terms_message">Please note that there may be sensitive material below.</string>
    <string name="terms_ask">Are you over 18 years old?</string>
    <string name="terms_yes_or_no">Yes / No</string>
    <string name="next_button">Next</string>
    <string name="terms_no_or_yes">No / Yes</string>
    <string name="title_general_news">General news</string>
    <string name="title_sports_news">Sports news\n</string>
    <string name="title_tech_news">Tech news\n</string>
    <string name="button_add_news">Add news</string>
    <string name="title_general_news_fragment">General news</string>
    <string name="title_sports_news_fragment">Sports news</string>
    <string name="title_tech_news_fragment">Tech news\n</string>
    <string name="text_author">Author</string>
    <string name="text_title">Title\n</string>
    <string name="text_description">Description</string>
    <string name="welcome_title">Welcome</string>
    <string name="login_button">Enter</string>
    <string name="opt_1">General news</string>
    <string name="enter_button">Enter</string>
    <string name="title_item">Title</string>

</resources>