<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD6F6"
    tools:context=".fragment.TermFragment">

    <TextView
        android:id="@+id/tv_hellow"
        android:layout_width="297dp"
        android:layout_height="24dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/jetbrains_mono_medium"
        android:text="@string/terms_hello"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jetbrains_mono_medium"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_hellow"
        app:layout_constraintStart_toStartOf="@+id/tv_hellow"
        app:layout_constraintTop_toBottomOf="@+id/tv_hellow" />

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/jetbrains_mono_medium"
        android:text="@string/terms_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_result"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    <TextView
        android:id="@+id/tv_ask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/jetbrains_mono_medium"
        android:text="@string/terms_ask"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_terms"
        app:layout_constraintStart_toStartOf="@+id/tv_terms"
        app:layout_constraintTop_toBottomOf="@+id/tv_terms" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="128dp"
        android:layout_height="26dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/jetbrains_mono_medium"
        android:text="@string/terms_no_or_yes"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_ask"
        app:layout_constraintStart_toStartOf="@+id/tv_ask"
        app:layout_constraintTop_toBottomOf="@+id/tv_ask" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="229dp"
        android:layout_height="41dp"
        android:layout_marginTop="100dp"
        android:background="#673AB7"
        android:fontFamily="@font/jetbrains_mono_medium"
        android:gravity="center"
        android:text="@string/next_button"
        android:textColorHighlight="#673AB7"
        android:textColorLink="#673AB7"
        app:layout_constraintEnd_toEndOf="@+id/switch1"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />


</androidx.constraintlayout.widget.ConstraintLayout>